fix: correct render.yaml structure, dynamic CORS, prod datasource config